app/src/main/java/com/example/calcomanias_rocket/app/errors/UnknowErrorUiModel.kt
package com.example.calcomanias_rocket.app.errors

class UnknowErrorUiModel(private val onClick: (() -> Unit)? = null) : ErrorUiModel {
}